--- a/Novateca.Web/Novateca.Web/Views/Shared/_UserPagesLayout.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Shared/_UserPagesLayout.cshtml
@@ -17,95 +17,60 @@
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
-    <style>
-        .vertical-menu {
-            height: 100%;
-            width: 160px;
-            position: fixed;
-            z-index: 1;
-            top: 0;
-            left: 0;
-            background-image: linear-gradient(to bottom, #C0C0C0, #696969);
-            /* background-color: #87877e; */
-            /* background-image: url("../images/menu.jpg"); */
-            overflow-x: hidden;
-            padding-top: 20px;
-        }
-
-            .vertical-menu a {
-                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-                font-size: 16px;
-                font-weight: bold;
-                text-align: center;
-                color: ghostwhite; /* Black text color */
-                display: block; /* Make the links appear below each other */
-                padding: 12px; /* Add some padding */
-                text-decoration: none; /* Remove underline from links */
-            }
-
-        .main {
-            margin-left: 160px; /* Same as the width of the sidenav */
-            font-size: 12px; /* Increased text to enable scrolling */
-            padding: 0px 10px;
-        }
-
-        .vertical-menu a:hover {
-            background-color: #A9A9A9; /* Dark grey background on mouse-over */
-        }
-        /*
-        .vertical-menu a.active {
-                    background-color: #000000;
-                    color: white;
-                }
-
-        */
-
-    </style>
 </head>
 <body>
-    <div class="vertical-menu">
-        <div class="row">
-            <a href="@Url.Action("Index", "Books")" class="active">
-                <img src="~/images/Novateca_Logo_Sem_Fundo.png" style="width: 100px; height: 80px" />
-            </a>
-        </div>
-        <!-- Empréstimos -->
-        <a href="@Url.Action("Index", "Loans")" class="active">
-            <span class="glyphicon glyphicon-book" style="padding: 10px"></span>
-            Empréstimos
-        </a>
-        <a href="@Url.Action("Index", "Books")" class="active">
-            <span class="glyphicon glyphicon-book" style="padding: 10px"></span>
-            Livros
-        </a>
-        <a href="@Url.Action("Index", "Books")" class="active">
-            <span class="glyphicon glyphicon-book" style="padding: 10px"></span>
-            Livros
-        </a>
-        <!-- <a href="@Url.Action("GetNewspapers", "Information")" class="active">Periódicos</a>
-         <a href="@Url.Action("GetMMultimedias", "Information")" class="active">Multimídias</a>
-    -->
-        <a href="@Url.Action("Index", "FavoriteBooks")" class="active">
-            <span class="glyphicon glyphicon-star" style="padding: 10px"></span>
-            Favoritos
-        </a>
-        <a href="@Url.Action("Logout", "Account")" class="active">Sair</a>
-        <a href="@Url.Action("About","Home")" class="active">Sobre o Novateca</a>
-        <a href="@Url.Action("Contact","Home")" class="active">Contato</a>
-
-        <!--
-        <p>&copy; 2018 - Novateca.Web</p>
-        <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-        -->
-    </div>
-
-    <partial name="_CookieConsentPartial" />
+    <nav class="navbar navbar-inverse navbar-fixed-top"
+         style="background-color: white; height: 18%; border-color: white;">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                    <a asp-area="" asp-controller="User" asp-action="Index" class="navbar-brand">
+                        <img src="~/images/logo.png" style="width: 80px; height: 80px" />
+                    </a>
+                </div>
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                </div>
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                    <div id="imaginary_container">
+                        <div class="input-group stylish-input-group">
+                            <input type="text" class="form-control" placeholder="O que você procura?"
+                                   style="border-radius:20px; width: 200px;
+                                   margin-top: 10%;">
+                            @*<span class="input-group-addon">
+                                <button type="submit">
+                                    <span class="glyphicon glyphicon-search"></span>
+                                </button>
+                            </span>*@
+                        </div>
+                    </div>
+                </div>
+</nav>
 
     <div class="container body-content">
         @RenderBody()
         <hr />
+        <!-- Footer -->
+
     </div>
+    <footer class="page-footer">
+
+        <!-- Footer Links -->
+        <div class="container-fluid text-center text-md-right">
+            <!-- <div class="navbar-collapse collapse"> -->
+            <ul class="nav navbar navbar-default  navbar-fixed-bottom" role="navigation">
+                <li><a asp-area="" asp-controller="Home" asp-action="Contact">Suporte</a></li>
+                <li><a asp-area="" asp-controller="Home" asp-action="About">Sobre nós</a></li>
+            </ul>
+
+        </div>
+        <!-- Footer Links -->
+    </footer>
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
