--- a/Novateca.Web/Novateca.Web/Views/Account/HomeAdmin.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Account/HomeAdmin.cshtml
@@ -7,7 +7,7 @@
 <div class="row" style="height: 200px;">
     <!-- Multimídias Início -->
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center"
-         style="background-color: ; height: ; border: 2px solid;">
+         style="border: 2px solid;">
         <div class="row" style="height: 110px;">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
                 <a asp-area="" asp-controller="Multimedias" asp-action="Index" class="navbar-brand">
@@ -34,7 +34,7 @@
     </div>
     <!-- Livros Início -->
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center"
-         style="background-color: ; height: ; border: 2px solid; ">
+         style=" border: 2px solid; ">
         <div class="row" style="height: 110px;">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                 <a asp-area="" asp-controller="Books" asp-action="Index" class="navbar-brand">
@@ -61,7 +61,7 @@
     </div>
     <!--  Periódicos Início -->
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center"
-         style="background-color: ; height: ; border: 2px solid;">
+         style=" border: 2px solid;">
         <div class="row" style="height: 110px;">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                 <a asp-area="" asp-controller="Newspapers" asp-action="Index" class="navbar-brand">
@@ -88,7 +88,7 @@
     </div>
     <!-- Usuários Início -->
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center"
-         style="background-color: ; height: ; border: 2px solid;">
+         style=" border: 2px solid;">
         <div class="row" style="height: 90px;">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                 <a asp-area="" asp-controller="ApplicationUsers" asp-action="Index" class="navbar-brand">
@@ -115,7 +115,7 @@
     </div>
     <!-- Configurações -->
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center"
-         style="background-color: ; height: ; border: 2px solid; ">
+         style=" border: 2px solid; ">
         <div class="row" style="height:125px;">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                 <a asp-area="" asp-controller="Admin" asp-action="Config" class="navbar-brand">
@@ -158,6 +158,7 @@
                 <p style="font-family: Britannic Bold; padding: 80px;">Configurações</p>
             </div>
         </div>*@
+</div>
 
 
 
