--- a/Novateca.Web/Novateca.Web/Views/Shared/_UserPagesLayout.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Shared/_UserPagesLayout.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Http
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
-
+@model IEnumerable<Novateca.Web.Models.ApplicationUser>
 
 
 <!DOCTYPE html>
@@ -44,10 +44,10 @@
                                    style="border-radius:20px; width: 200px;
                                    margin-top: 10%;">
                             @*<span class="input-group-addon">
-                        <button type="submit">
-                            <span class="glyphicon glyphicon-search"></span>
-                        </button>
-                    </span>*@
+                                    <button type="submit">
+                                        <span class="glyphicon glyphicon-search"></span>
+                                    </button>
+                                </span>*@
                         </div>
                     </div>
                 </div>
@@ -57,8 +57,9 @@
                         <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
                             <ul class="nav navbar-nav navbar-right">
                                 <li>
-                                    <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Seja bem-vindo @UserManager.GetUserName(User)!</a>
-                                </li>
+                                    @*<a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Seja bem-vindo @UserManager.GetUserName(User)!</a>*@
+                                    <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage"><img class="rounded-circle" src="@Html.DisplayNameFor(model => model.URLProfilePicture)" style="width: 100px; height: 100px"/></a>
+</li>
                                 <li>
                                     <button type="submit" class="btn btn-link navbar-btn navbar-link">Sair</button>
                                 </li>
@@ -66,7 +67,9 @@
                         </form>
                     }
                 </div>
-</nav>
+            </div>
+        </div>
+    </nav>
 
     <div class="container body-content">
         @RenderBody()
